[package]
name = "macroquad_jorma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pong"
src = "src/bin/pong.rs"

[[bin]]
name = "game_of_life"
src = "src/bin/game_of_life.rs"

[dependencies]
macroquad = "0.3.16"
rand = "0.8.5"